Updated camera script & landscape

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -6,7 +6,7 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=0
+dock_split_2=-744
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=817
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://02_Levels/Course/Course.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://02_Levels/", "res://02_Levels/Course/", "res://01_Assets/", "res://01_Assets/01_3D/", "res://01_Assets/01_3D/02_Props/", "res://01_Assets/01_3D/02_Props/trees/", "res://01_Assets/01_3D/02_Props/trees/Multi-mesh/")
+dock_filesystem_selected_paths=PackedStringArray("res://01_Assets/01_3D/03_Environment/Course.glb")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://02_Levels/", "res://02_Levels/Camera/", "res://01_Assets/", "res://01_Assets/01_3D/", "res://01_Assets/01_3D/03_Environment/", "res://01_Assets/01_3D/02_Props/")
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_6_selected_tab_idx=0
