Updated camera script & landscape

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://01_Assets/01_3D/03_Environment/Course.glb")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://02_Levels/", "res://02_Levels/Camera/", "res://01_Assets/", "res://01_Assets/01_3D/", "res://01_Assets/01_3D/03_Environment/", "res://01_Assets/01_3D/02_Props/")
+dock_filesystem_selected_paths=PackedStringArray("res://02_Levels/Course/Course.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://02_Levels/", "res://02_Levels/Course/", "res://02_Levels/Camera/", "res://01_Assets/", "res://01_Assets/01_3D/", "res://01_Assets/01_3D/03_Environment/", "res://01_Assets/01_3D/02_Props/", "res://01_Assets/01_3D/02_Props/trees/")
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_6_selected_tab_idx=0
@@ -35,13 +35,13 @@ open_scenes=PackedStringArray("res://02_Levels/Main.tscn", "res://02_Levels/Cour
 current_scene="res://02_Levels/Course/Course.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://02_Levels/Camera/camera_controller.gd", "res://02_Levels/Main.gd", "res://01_Assets/01_3D/02_Props/trees/Multi-mesh/multi-mesh_Trees.gd"]
-selected_script="res://02_Levels/Camera/camera_controller.gd"
+open_scripts=["res://02_Levels/Camera/camera_controller.gd", "res://02_Levels/Main.gd", "res://01_Assets/01_3D/02_Props/trees/Multi-mesh/multi-mesh_Trees.gd", "res://02_Levels/Course/trees.gd"]
+selected_script="res://02_Levels/Course/trees.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
