Updated camera script & landscape

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -38,8 +38,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 30.0,
+"row": 81,
+"scroll_position": 44.5333,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -52,7 +52,21 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 46,
+"row": 66,
+"scroll_position": 1.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://01_Assets/01_3D/02_Props/trees/snap_tree.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 29,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
