Updated camera script & landscape

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -10,14 +10,14 @@ dock_split_2=-153
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=817
-dock_hsplit_3=-1243
+dock_hsplit_3=-432
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://02_Levels/Course/Course.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://02_Levels/Main.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://04_Golf/", "res://04_Golf/01_Balls/", "res://04_Golf/01_Balls/Textures/", "res://03_Player/", "res://03_Player/03_UI/", "res://03_Player/03_UI/ProgressBars/", "res://02_Levels/", "res://02_Levels/Course/", "res://02_Levels/Camera/", "res://01_Assets/", "res://01_Assets/01_3D/", "res://01_Assets/01_3D/03_Environment/", "res://01_Assets/01_3D/02_Props/", "res://01_Assets/01_3D/02_Props/trees/simple_pine_leaves/")
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
@@ -31,17 +31,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://02_Levels/Main.tscn", "res://02_Levels/Course/Course.tscn", "res://01_Assets/01_3D/02_Props/trees/tree.tscn", "res://04_Golf/01_Balls/GolfBall.tscn")
+open_scenes=PackedStringArray("res://02_Levels/Main.tscn", "res://02_Levels/Course/Course.tscn", "res://04_Golf/01_Balls/GolfBall.tscn")
 current_scene="res://02_Levels/Course/Course.tscn"
-center_split_offset=-854
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
-selected_bottom_panel_item=0
+center_split_offset=-616
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://02_Levels/Camera/camera_controller.gd", "res://04_Golf/01_Balls/GolfBall.gd", "res://02_Levels/Main.gd", "res://01_Assets/01_3D/02_Props/trees/Multi-mesh/multi-mesh_Trees.gd", "res://03_Player/03_UI/PowerBar.gd", "res://01_Assets/01_3D/02_Props/trees/snap_tree.gd", "res://02_Levels/Course/trees.gd"]
-selected_script="res://04_Golf/01_Balls/GolfBall.gd"
+selected_script="res://02_Levels/Main.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
