--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -6,7 +6,7 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=-340
+dock_split_2=-142
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=817
@@ -33,15 +33,15 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://02_Levels/Main.tscn", "res://02_Levels/Course/Course.tscn", "res://04_Golf/01_Balls/GolfBall.tscn")
 current_scene="res://02_Levels/Main.tscn"
-center_split_offset=-616
-selected_default_debugger_tab_idx=1
+center_split_offset=-919
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://02_Levels/Course/Course.gd", "res://04_Golf/01_Balls/GolfBall.gd", "res://02_Levels/Main.gd", "res://01_Assets/01_3D/02_Props/trees/Multi-mesh/multi-mesh_Trees.gd", "res://03_Player/03_UI/PowerBar.gd", "res://01_Assets/01_3D/02_Props/trees/snap_tree.gd", "res://02_Levels/Course/trees.gd"]
-selected_script="res://02_Levels/Main.gd"
+open_scripts=["res://04_Golf/01_Balls/GolfBall.gd", "res://02_Levels/Main.gd"]
+selected_script="res://04_Golf/01_Balls/GolfBall.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
