--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_split_2=-142
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=817
-dock_hsplit_3=-1301
+dock_hsplit_3=-1059
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
@@ -33,7 +33,7 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://02_Levels/Main.tscn", "res://02_Levels/Course/Course.tscn", "res://04_Golf/01_Balls/GolfBall.tscn")
 current_scene="res://02_Levels/Main.tscn"
-center_split_offset=-919
+center_split_offset=-532
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
@@ -41,7 +41,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://04_Golf/01_Balls/GolfBall.gd", "res://02_Levels/Main.gd"]
-selected_script="res://04_Golf/01_Balls/GolfBall.gd"
+selected_script="res://02_Levels/Main.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
