--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://02_Levels/Main.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://04_Golf/", "res://04_Golf/01_Balls/", "res://04_Golf/01_Balls/Textures/", "res://03_Player/", "res://03_Player/03_UI/", "res://03_Player/03_UI/ProgressBars/", "res://02_Levels/", "res://02_Levels/Course/", "res://01_Assets/", "res://01_Assets/01_3D/", "res://01_Assets/01_3D/03_Environment/", "res://01_Assets/01_3D/02_Props/trees/simple_pine_leaves/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://05_Scripts/", "res://04_Golf/", "res://04_Golf/01_Balls/", "res://03_Player/", "res://03_Player/03_UI/", "res://02_Levels/", "res://02_Levels/Course/", "res://01_Assets/", "res://01_Assets/01_3D/", "res://01_Assets/01_3D/03_Environment/", "res://01_Assets/01_3D/02_Props/", "res://01_Assets/01_3D/02_Props/trees/")
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_6_selected_tab_idx=0
@@ -31,7 +31,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://02_Levels/Main.tscn", "res://02_Levels/Course/Course.tscn", "res://04_Golf/01_Balls/GolfBall.tscn")
+open_scenes=PackedStringArray("res://02_Levels/Main.tscn", "res://02_Levels/Course/Course.tscn", "res://04_Golf/01_Balls/GolfBall.tscn", "res://01_Assets/01_3D/02_Props/trees/tree.tscn")
 current_scene="res://02_Levels/Main.tscn"
 center_split_offset=-532
 selected_default_debugger_tab_idx=0
